add a timeline component on homepage

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-body{
-    background-color: #1A202C;
-    color: white
+body {
+  background-color: #1a202c;
+  color: white;
 }
+
